# nexus

./: .env.example  .gitignore  README.md  docker-compose.yml
.claude/: CLAUDE.md  _verify_vault.py
.claude/.obsidian/: graph.json
.claude/api/: conventions.md
.claude/architecture/: layers.md
.claude/architecture/designpatterns/: chain_of_responsibility.md  repository.md
.claude/configurations/: agent_roles.md  claude_usage.md  model_decision.md
.claude/designpatterns/: design_patterns_orchestrator.md
.claude/designpatterns/kotlin/: kotlin_orchestrator.md
.claude/designpatterns/python/: python_orchestrator.md
.claude/fundamentals/: fundamentals_orchestrator.md
.claude/fundamentals/architecture/: architectural_patterns.md  architecture_fundamentals_orchestrator.md  circuit_breaker.md  service_mesh.md  twelve_factor.md
.claude/fundamentals/caching/: cache_aside.md  cache_stampede.md  caching_orchestrator.md  http_caching.md  invalidation.md  ttl_and_eviction.md
.claude/fundamentals/databases/: acid_and_transactions.md  databases_orchestrator.md  indexing.md  migrations.md  normalization.md  nosql.md  orm_and_connection_pooling.md  relational_model.md
.claude/fundamentals/http/: http_basics.md  http_orchestrator.md  https_tls.md  idempotency_and_statelessness.md
.claude/fundamentals/messaging/: delivery_and_ordering.md  kafka.md  message_brokers.md  messaging_orchestrator.md  realtime_websockets_sse.md
.claude/fundamentals/networking/: dns.md  how_the_internet_works.md  networking_orchestrator.md  tcp_and_connections.md
.claude/fundamentals/observability/: distributed_tracing.md  metrics_red.md  observability_orchestrator.md  opentelemetry.md  structured_logging.md  three_pillars.md
.claude/fundamentals/search/: embeddings.md  hybrid_search.md  lexical_vs_semantic.md  pgvector.md  search_orchestrator.md  vector_indexes_ann.md
.claude/fundamentals/web/: openapi.md  rest.md  web_orchestrator.md  web_servers.md
.claude/git/: branching.md  commits.md  git_orchestrator.md  milestones.md  pr_walkthrough.md  pull_requests.md  versioning.md
.claude/git/templates/: pr_walkthrough_widget.html
.claude/idioms/: dsl.md  exposed-dsl.md
.claude/infra/: infra_orchestrator.md  observability_stack.md
.claude/languages/: languages_orchestrator.md
.claude/lessons/: assessment.md  glossary.md  lesson_orchestrator.md  lesson_template.md  methodology.md  session_protocol.md
.claude/project/: architecture_vision.md  decisions.md  objective.md  progress.md  project_develop_orchestrator.md  roadmap.md
.claude/security/: cors.md  owasp.md  password_hashing.md  security_orchestrator.md  tls.md
.claude/services/: services_orchestrator.md
.claude/testing/: strategy.md
.github/PULL_REQUEST_TEMPLATE/: chore.md  docs.md  feature.md  fix.md
.github/workflows/: ci.yml
nexus-api/: .dockerignore  .env.example  Dockerfile  build.gradle.kts  settings.gradle.kts
nexus-api/gradle/: libs.versions.toml
nexus-ingest/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
nexus-ingest/app/: config.py  db.py  errors.py  ingest.py  main.py  telemetry.py
nexus-ingest/app/chunking/: __init__.py  base.py  character.py
nexus-ingest/app/embeddings/: __init__.py  base.py  factory.py  fake.py  local.py  voyage.py
nexus-ingest/app/messaging/: consumer.py
nexus-ingest/app/routes/v1/: health.py  search.py
nexus-ingest/tests/: test_chunking.py  test_embeddings.py  test_health.py  test_ingest_integration.py
(+165 files in other folders)
