[project]
name = "nexus-ingest"
version = "0.9.0"
description = "Nexus document ingestion service — parse, chunk, embed, search."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "aiokafka>=0.11",
    "asyncpg>=0.30",
    "pgvector>=0.4",
]

[project.optional-dependencies]
# Heavy/optional embedding backends — install only the provider you run.
embed-local = ["sentence-transformers>=3.0"]
embed-voyage = ["voyageai>=0.3"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "mypy>=1.10",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.mypy]
python_version = "3.13"
strict = true

[[tool.mypy.overrides]]
module = ["aiokafka.*", "asyncpg.*", "pgvector.*", "sentence_transformers.*", "voyageai.*"]
ignore_missing_imports = true
